workloads/garmindashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garmindashboard
  namespace: garmindashboard
  labels:
    app: garmindashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garmindashboard
  template:
    metadata:
      labels:
        app: garmindashboard
    spec:
      containers:
      - name: garmindashboard
        image: garmindashboard:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
