workloads/garmindashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garmindashboard
  namespace: garmindashboard
spec:
  ingressClassName: nginx
  rules:
  - host: garmin.192.168.0.19.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garmindashboard
            port:
              number: 80
